--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -1,6 +1,10 @@
 .profile__info-name {
   margin: 0;
   padding: 0 18px 0 0px;
+  /* text overflow */
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   max-width: 373px;
   /* typography */
   font-style: normal;
@@ -22,6 +26,7 @@
     padding: 0;
     align-self: center;
     text-align: center;
+    /* text overflow */
     max-width: 196px;
     /* typography */
     font-size: 22px;
